--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -44,7 +44,7 @@
                                     </td>
                                 </tr>
                             {% empty %}
-                                <h3>No projects...</h3>
+                                <h3>No projects...</h3><br>
                             {% endfor %}
                         </tbody>
                     </table>
