--- a/templates/project.html
+++ b/templates/project.html
@@ -25,28 +25,41 @@
         </nav>
         <br>
         <br>
-        <form class="form-signin" method="post" action="/login">
+        <form class="form-signin" method="post" action="/process">
             {% csrf_token %}
             <div class="container">
                 <div class="row justify-content-center">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p>
+                                Project Number
+                            </p>
+                        </div>
+                        <div class="col-md-6">
+                            <input type="text"
+                                   id="project_number"
+                                   name="project_number"
+                                   value="{{ project.number }}"
+                                   disabled>
+                        </div>
+                    </div>
+                    <hr>
                     {% for sentence in sentences %}
                         <div class="row">
                             <div class="col-md-6">
                                 <p>
                                     {{ sentence.original }}
                                 </p>
-                                <hr>
                             </div>
                             <div class="col-md-6">
-                                <input type="text"
-                                       id="translated"
-                                       name="translated"
-                                       class="form-control"
-                                       placeholder="Type your translation here"
-                                       required>
-                                <hr>
+                                <textarea id="{{sentence.sentence_id}}"
+                                          name="{{sentence.sentence_id}}"
+                                          class="form-control"
+                                          placeholder="Type your translation here"
+                                          required></textarea>
                             </div>
                         </div>
+                        <hr>
                     {% empty %}
                         <h3>No sentences...</h3>
                     {% endfor %}
