Fixed allowed hosts

--- a/templates/home.html
+++ b/templates/home.html
@@ -86,6 +86,12 @@
                             <option value="Model5">
                                 Quadratic Discriminant Analysis
                             </option>
+                            <option value="Ensemble1">
+                                Ensemble1
+                            </option>
+                            <option value="Ensemble2">
+                                Ensemble2
+                            </option>
                         </select>
                     </div>
 
